syntax = "proto3";

option csharp_namespace = "Esale.GetwayServiceGrpc";


package GetwayService;

enum ProviderSmsTypeEnum
{
	None = 0;
	Magfa = 1;
}
enum TypeMessageEnum
{
	Unknown = 0;
	Sms = 1;
	Email = 2;
}


service GetwayServiceGrpc{
	rpc GetCaptcha(ContentInputDto) returns (HttpResponseMessageDto);
	rpc SendService(SendBoxServiceInput) returns (SendBoxServiceDto);
} 
message ContentInputDto{
	string ContentValue  =1;
	string KeyValue = 2;
}
message HttpResponseMessageDto{
   bool IsSuccessStatusCode =1;
   string StringContent = 2;
}

message SendBoxServiceInput{
	string Recipient = 1;
	string Text = 2;
	ProviderSmsTypeEnum Provider = 3;
	TypeMessageEnum Type = 4;
}

message SendBoxServiceDto{
	bool Success = 1;
	string DataResult = 2;
	string Message = 3;
	int32 MessageCode = 4;

}