syntax = "proto3";

option csharp_namespace = "PaymentManagement.Application.GatewayServiceGrpc";

import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package GatewayService;

service GatewayServiceGrpc{
	rpc Authenticate(AuthenticateInput) returns (Output);
	rpc HandShakeWithIranKish(IranKishHandShakeInput) returns (Output);
	rpc HandShakeWithMellat(MellatHandShakeInput) returns (Output);
	rpc HandShakeWithParsian(ParsianHandShakeInput) returns (Output);
	rpc HandShakeWithPasargad(PasargadHandShakeInput) returns (Output);
	rpc VerifyToIranKish(IranKishVerifyInput) returns (Output);
	rpc VerifyToMellat(MellatVerifyInput) returns (Output);
	rpc VerifyToParsian(ParsianVerifyInput) returns (Output);
	rpc VerifyToPasargad(PasargadVerifyInput) returns (Output);
    rpc InquiryToIranKish(IranKishInquiryInput) returns (Output);
	rpc InquiryToMellat(MellatInquiryInput) returns (Output);
	rpc InquiryToParsian(ParsianInquiryInput) returns (Output);
	rpc InquiryToPasargad(PasargadInquiryInput) returns (Output);
    rpc ReverseToIranKish(IranKishReverseInput) returns (Output);
    rpc ReverseToMellat(MellatReverseInput) returns (Output);
	rpc ReverseToParsian(ParsianReverseInput) returns (Output);
	rpc ReverseToPasargad(PasargadReverseInput) returns (Output);
}
message Output{
	string Result = 1;
}
message AuthenticateInput{
	string Type = 1;
	string UserName = 2;
	string Password = 3;
}
message IranKishHandShakeInput{
	string TerminalId = 1;
	string AcceptorId = 2;
	string PassPhrase = 3;
	string CallBackUrl = 4;
	int64 Amount = 5;
	string RequestId = 6;
	string NationalCode = 7;
	string Mobile = 8;
	string RsaPublicKey = 9;
}
message MellatHandShakeInput{
	int64 TerminalId = 1;
	string UserName = 2;
	string UserPassword = 3;
	int32 OrderId = 4;
	int64 Amount = 5;
	string CallBackUrl = 6;
	string MobileNo = 7;
	string EncryptedNationalCode = 8;
	int32 Switch = 9;
}
message ParsianHandShakeInput{
	string LoginAccount = 1;
	string CallBackUrl = 2;
	int64 Amount = 3;
	int32 OrderId = 4;
	string AdditionalData = 5;
	string Originator = 6;
	string Key = 7;
    string IV = 8;
    int32 ThirdPartyCode = 9;
}
message PasargadHandShakeInput{
	string Token = 1;
	int64 Amount = 2;
	string CallbackApi = 3;
	string Description = 4;
	string Invoice = 5;
	string InvoiceDate = 6;
	string MobileNumber = 7;
	string PayerMail = 8;
	string PayerName = 9;
	int32 ServiceCode = 10;
	string ServiceType = 11;
	int32 TerminalNumber = 12;
	string NationalCode = 13;
	string Key = 14;
    string IV = 15;
}
message IranKishVerifyInput{
	string TerminalId = 1;
	string RetrievalReferenceNumber = 2;
	string SystemTraceAuditNumber = 3;
	string TokenIdentity = 4;
}
message MellatVerifyInput{
	int64 TerminalId = 1;
	string UserName = 2;
	string UserPassword = 3;
	int64 OrderId = 4;
	int64 SaleOrderId = 5;
	int64 SaleReferenceId = 6;
	int32 Switch = 7;
}
message ParsianVerifyInput{
	string LoginAccount = 1;
	int64 Token = 2;
}
message PasargadVerifyInput{
	string Token = 1;
	string Invoice = 2;
	string UrlId = 3;
}
message IranKishInquiryInput{
	string TerminalId = 1;
	string PassPhrase = 2;
	string TokenIdentity = 3;
	int32 FindOption = 4;
}
message MellatInquiryInput{
	int64 TerminalId = 1;
	string ReportServiceUserName = 2;
	string ReportServicePassword = 3;
	int64 OrderId = 4;
	int32 Switch = 5;
}
message ParsianInquiryInput{
	int32 OrderId = 1;
	string LoginAccount = 2;
	string ReportServiceUserName = 3;
	string ReportServicePassword = 4;
}
message PasargadInquiryInput{
	string Token = 1;
	string InvoiceId = 2;
}
message IranKishReverseInput{
	string TerminalId = 1;
	string RetrievalReferenceNumber = 2;
	string SystemTraceAuditNumber = 3;
	string TokenIdentity = 4;
}
message MellatReverseInput{
	int64 TerminalId = 1;
	string UserName = 2;
	string UserPassword = 3;
	int64 OrderId = 4;
	int64 SaleOrderId = 5;
	int64 SaleReferenceId = 6;
	int32 Switch = 7;
}
message ParsianReverseInput{
	string LoginAccount = 1;
	int64 Token = 2;
}
message PasargadReverseInput{
	string Token = 1;
	string Invoice = 2;
	string UrlId = 3;
}