syntax = "proto3";

option csharp_namespace = "PaymentManagement.Application.PaymentServiceGrpc";

import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package PaymentService;

service PaymentServiceGrpc{
	rpc GetPaymentInformation(PaymentInformationRequest) returns (PaymentInformationResponse);
	rpc GetPaymentStatusList(PaymentGetStatusDto) returns (PaymentStatusViewModel);
	rpc GetPaymentStatusByGroupList(PaymentGetStatusDto) returns (PaymentStatusGroupViewModel);
	rpc RetryForVerify(RetryForVerifyRequest) returns (RetryForVerifyResponse);
	rpc HandShake(HandShakeDto) returns (HandShakeViewModel);
	rpc Verify(PaymentInputDto) returns (PaymentOutputViewModel);
	rpc Reverse(PaymentInputDto) returns (PaymentOutputViewModel);
}

message PaymentInformationRequest{
	int32 PaymentId = 1;
}

message PaymentInformationResponse{
    int32 PaymentId = 1;
    string TransactionCode = 2;
    google.protobuf.Timestamp TransactionDate  = 3;
    string TransactionPersianDate = 4;
}

message PaymentStatusViewModel {
    repeated PaymentStatusData PaymentStatusData = 1;
}
message PaymentStatusGroupViewModel {
    repeated PaymentStatusDataGroup PaymentStatusData = 1;
}
message PaymentStatusData {
    int32 Status = 1;
    string Message = 2;
    int64 Count = 3;  
      int32 f1 = 4;
    int32 f2 = 5;
    int32 f3 = 6;
    int32 f4 = 7;

}
message PaymentStatusDataGroup {
    int32 Status = 1;
    string Message = 2;
    int64 Count = 3; 
    int32 f1 = 4;
    int32 f2 = 5;
    int32 f3 = 6;
    int32 f4 = 7;
   


}

message PaymentGetStatusDto {
    int32 RelationId = 1;
    int32 RelationIdB = 2;
    int32 RelationIdC = 3;
    int32 RelationIdD = 4;
    bool IsRelationIdGroup = 5;
    bool IsRelationIdBGroup = 6; 
    bool IsRelationIdCGroup = 7; 
    bool IsRelationIdDGroup = 8; 
    
   
}

message RetryForVerifyRequest{
}

message RetryForVerifyResponse {
    repeated RetryForVerifyData retryForVerifyData = 1;
}

message RetryForVerifyData {
    int32 PaymentId = 1;
    int32 PaymentStatus = 2;
    int32 FilterParam1 = 3;
    int32 FilterParam2 = 4;
    int32 FilterParam3 = 5;
    int32 FilterParam4 = 6;
} 

message HandShakeDto {
     int32 PspAccountId =1;
     int64 Amount =2;
     string CallBackUrl =3;
     string NationalCode =4;
     string Mobile =5;
     string AdditionalData =6;
     int32 FilterParam1 =7;
     int32 FilterParam2 =8;
     int32 FilterParam3 =9;
     int32 FilterParam4 =10;
}

message HandShakeViewModel {
     int32 StatusCode =1;
     string Message =2;        
     int32 PaymentId =3;
     string Token =4;
     string HtmlContent =5;
     string PspJsonResult =6;
}

message PaymentInputDto {
     int32 PaymentId =1;
}

message PaymentOutputViewModel {
     int32 StatusCode = 1;
     string Message = 2;
     int32 PaymentId = 3;
     string PspJsonResult = 4;
}
